crates/pg_syntax/tests/snapshots/postgres_regress/join@263.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into nt1 values (2,true,false);"
---
InsertStmt@0..38
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "nt1"
  Whitespace@15..16 " "
  SelectStmt@16..36
    Values@16..22 "values"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..36
      AConst@24..25
        Iconst@24..25 "2"
      Ascii44@25..26 ","
      AConst@26..30
        TrueP@26..30 "true"
      Ascii44@30..31 ","
      AConst@31..36
        FalseP@31..36 "false"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

