crates/pg_syntax/tests/snapshots/postgres_regress/join@264.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into nt1 values (3,false,false);"
---
InsertStmt@0..39
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "nt1"
  Whitespace@15..16 " "
  SelectStmt@16..37
    Values@16..22 "values"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..37
      AConst@24..25
        Iconst@24..25 "3"
      Ascii44@25..26 ","
      AConst@26..31
        FalseP@26..31 "false"
      Ascii44@31..32 ","
      AConst@32..37
        FalseP@32..37 "false"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

