crates/pg_syntax/tests/snapshots/postgres_regress/join@267.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into nt2 values (3,3,false,false);"
---
InsertStmt@0..41
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "nt2"
  Whitespace@15..16 " "
  SelectStmt@16..39
    Values@16..22 "values"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..39
      AConst@24..25
        Iconst@24..25 "3"
      Ascii44@25..26 ","
      AConst@26..27
        Iconst@26..27 "3"
      Ascii44@27..28 ","
      AConst@28..33
        FalseP@28..33 "false"
      Ascii44@33..34 ","
      AConst@34..39
        FalseP@34..39 "false"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

