crates/pg_syntax/tests/snapshots/postgres_regress/join@268.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into nt3 values (1,1,true);"
---
InsertStmt@0..34
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "nt3"
  Whitespace@15..16 " "
  SelectStmt@16..32
    Values@16..22 "values"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..32
      AConst@24..25
        Iconst@24..25 "1"
      Ascii44@25..26 ","
      AConst@26..27
        Iconst@26..27 "1"
      Ascii44@27..28 ","
      AConst@28..32
        TrueP@28..32 "true"
  Ascii41@32..33 ")"
  Ascii59@33..34 ";"

