crates/pg_syntax/tests/snapshots/postgres_regress/join@269.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into nt3 values (2,2,false);"
---
InsertStmt@0..35
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "nt3"
  Whitespace@15..16 " "
  SelectStmt@16..33
    Values@16..22 "values"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..33
      AConst@24..25
        Iconst@24..25 "2"
      Ascii44@25..26 ","
      AConst@26..27
        Iconst@26..27 "2"
      Ascii44@27..28 ","
      AConst@28..33
        FalseP@28..33 "false"
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

